# platform-api

./: CMakeLists.txt
android/hybris/: Android.mk  event_loop.h  ubuntu_application_gps_for_hybris.cpp  ubuntu_application_gps_hidl_for_hybris.cpp  ubuntu_application_sensors_for_hybris.cpp  ubuntu_hardware_booster_for_hybris.cpp  ubuntu_hardware_booster_hidl_for_hybris.cpp
data/: ubuntu-platform-api.pc.in
debian/: changelog  control  libubuntu-application-api-headers.install  libubuntu-application-api3.symbols  libubuntu-platform-hardware-api3.symbols  rules  ubuntu-application-api3-desktop.install  ubuntu-application-api3-examples.install  ubuntu-application-api3-touch.install
doc/: mainpage.md
include/ubuntu/: CMakeLists.txt
include/ubuntu/application/sensors/: haptic.h
include/ubuntu/hardware/: CMakeLists.txt  booster.h
src/ubuntu/: CMakeLists.txt
src/ubuntu/application/: CMakeLists.txt  base_module.h  ubuntu_application_api.cpp
src/ubuntu/application/common/: CMakeLists.txt
src/ubuntu/application/common/mirclient/: CMakeLists.txt  application_instance_mirclient_priv.h  application_options_mir.cpp  ubuntu_application_api_mirclient.cpp
src/ubuntu/application/desktop/: CMakeLists.txt
src/ubuntu/application/testbackend/: CMakeLists.txt  test_stubs.cpp
src/ubuntu/application/touch/: CMakeLists.txt
src/ubuntu/hardware/: android_hw_module.h  ubuntu_platform_hardware_api.cpp
src/ubuntu/hardware/alarms/: alarm.cpp
src/ubuntu/hardware/tests/: CMakeLists.txt  (+1 more)
tests/: CMakeLists.txt  test_ua_sensors_mock.cpp  test_ua_sensors_real.cpp
(+8 files in other folders)
